// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`STRATEGY_TEMPLATES > bear-put-spread payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": 6.05774,
      "s": 60,
    },
    {
      "p": 6.05774,
      "s": 70,
    },
    {
      "p": 6.05774,
      "s": 80,
    },
    {
      "p": 6.05774,
      "s": 90,
    },
    {
      "p": -3.94226,
      "s": 100,
    },
    {
      "p": -3.94226,
      "s": 110,
    },
    {
      "p": -3.94226,
      "s": 120,
    },
    {
      "p": -3.94226,
      "s": 130,
    },
    {
      "p": -3.94226,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x put 100 @30D",
    "sell 1x put 90 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > bull-call-spread payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -3.83138,
      "s": 60,
    },
    {
      "p": -3.83138,
      "s": 70,
    },
    {
      "p": -3.83138,
      "s": 80,
    },
    {
      "p": -3.83138,
      "s": 90,
    },
    {
      "p": -3.83138,
      "s": 100,
    },
    {
      "p": 6.16862,
      "s": 110,
    },
    {
      "p": 6.16862,
      "s": 120,
    },
    {
      "p": 6.16862,
      "s": 130,
    },
    {
      "p": 6.16862,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x call 100 @30D",
    "sell 1x call 110 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > call-calendar payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -3.01526,
      "s": 60,
    },
    {
      "p": -2.91218,
      "s": 70,
    },
    {
      "p": -2.27173,
      "s": 80,
    },
    {
      "p": -0.204645,
      "s": 90,
    },
    {
      "p": 4.0559,
      "s": 100,
    },
    {
      "p": 0.556519,
      "s": 110,
    },
    {
      "p": -1.26384,
      "s": 120,
    },
    {
      "p": -2.09001,
      "s": 130,
    },
    {
      "p": -2.425,
      "s": 140,
    },
  ],
  "strikes": [
    "sell 1x call 100 @30D",
    "buy 1x call 100 @60D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > call-diagonal payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -5.20117,
      "s": 60,
    },
    {
      "p": -5.09809,
      "s": 70,
    },
    {
      "p": -4.45764,
      "s": 80,
    },
    {
      "p": -2.39056,
      "s": 90,
    },
    {
      "p": 1.86999,
      "s": 100,
    },
    {
      "p": 3.37061,
      "s": 110,
    },
    {
      "p": 1.55024,
      "s": 120,
    },
    {
      "p": 0.724075,
      "s": 130,
    },
    {
      "p": 0.389086,
      "s": 140,
    },
  ],
  "strikes": [
    "sell 1x call 105 @30D",
    "buy 1x call 100 @60D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > call-ratio-spread payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -0.585156,
      "s": 60,
    },
    {
      "p": -0.585156,
      "s": 70,
    },
    {
      "p": -0.585156,
      "s": 80,
    },
    {
      "p": -0.585156,
      "s": 90,
    },
    {
      "p": -0.585156,
      "s": 100,
    },
    {
      "p": 9.41484,
      "s": 110,
    },
    {
      "p": -0.585156,
      "s": 120,
    },
    {
      "p": -10.5852,
      "s": 130,
    },
    {
      "p": -20.5852,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x call 100 @30D",
    "sell 2x call 110 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > collar payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": 35.4815,
      "s": 60,
    },
    {
      "p": 25.4815,
      "s": 70,
    },
    {
      "p": 15.4815,
      "s": 80,
    },
    {
      "p": 5.48151,
      "s": 90,
    },
    {
      "p": 0.481514,
      "s": 100,
    },
    {
      "p": -4.51849,
      "s": 110,
    },
    {
      "p": -14.5185,
      "s": 120,
    },
    {
      "p": -24.5185,
      "s": 130,
    },
    {
      "p": -34.5185,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x put 95 @30D",
    "sell 1x call 105 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > iron-butterfly payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -2.22637,
      "s": 60,
    },
    {
      "p": -2.22637,
      "s": 70,
    },
    {
      "p": -2.22637,
      "s": 80,
    },
    {
      "p": -2.22637,
      "s": 90,
    },
    {
      "p": 7.77363,
      "s": 100,
    },
    {
      "p": -2.22637,
      "s": 110,
    },
    {
      "p": -2.22637,
      "s": 120,
    },
    {
      "p": -2.22637,
      "s": 130,
    },
    {
      "p": -2.22637,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x put 90 @30D",
    "sell 1x put 100 @30D",
    "sell 1x call 100 @30D",
    "buy 1x call 110 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > iron-condor payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -3.62428,
      "s": 60,
    },
    {
      "p": -3.62428,
      "s": 70,
    },
    {
      "p": -3.62428,
      "s": 80,
    },
    {
      "p": 1.37572,
      "s": 90,
    },
    {
      "p": 3.87572,
      "s": 100,
    },
    {
      "p": 1.37572,
      "s": 110,
    },
    {
      "p": -3.62428,
      "s": 120,
    },
    {
      "p": -3.62428,
      "s": 130,
    },
    {
      "p": -3.62428,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x put 85 @30D",
    "sell 1x put 92.5 @30D",
    "sell 1x call 107.5 @30D",
    "buy 1x call 115 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > jade-lizard payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -27.3561,
      "s": 60,
    },
    {
      "p": -17.3561,
      "s": 70,
    },
    {
      "p": -7.35608,
      "s": 80,
    },
    {
      "p": 2.64392,
      "s": 90,
    },
    {
      "p": 5.14392,
      "s": 100,
    },
    {
      "p": 0.143924,
      "s": 110,
    },
    {
      "p": 0.143924,
      "s": 120,
    },
    {
      "p": 0.143924,
      "s": 130,
    },
    {
      "p": 0.143924,
      "s": 140,
    },
  ],
  "strikes": [
    "sell 1x put 92.5 @30D",
    "sell 1x call 105 @30D",
    "buy 1x call 110 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > long-call-butterfly payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -2.18535,
      "s": 60,
    },
    {
      "p": -2.18535,
      "s": 70,
    },
    {
      "p": -2.18535,
      "s": 80,
    },
    {
      "p": -2.18535,
      "s": 90,
    },
    {
      "p": 7.81465,
      "s": 100,
    },
    {
      "p": -2.18535,
      "s": 110,
    },
    {
      "p": -2.18535,
      "s": 120,
    },
    {
      "p": -2.18535,
      "s": 130,
    },
    {
      "p": -2.18535,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x call 90 @30D",
    "sell 2x call 100 @30D",
    "buy 1x call 110 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > long-put-butterfly payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -2.18535,
      "s": 60,
    },
    {
      "p": -2.18535,
      "s": 70,
    },
    {
      "p": -2.18535,
      "s": 80,
    },
    {
      "p": -2.18535,
      "s": 90,
    },
    {
      "p": 7.81465,
      "s": 100,
    },
    {
      "p": -2.18535,
      "s": 110,
    },
    {
      "p": -2.18535,
      "s": 120,
    },
    {
      "p": -2.18535,
      "s": 130,
    },
    {
      "p": -2.18535,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x put 110 @30D",
    "sell 2x put 100 @30D",
    "buy 1x put 90 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > long-strangle payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": 24.0286,
      "s": 60,
    },
    {
      "p": 14.0286,
      "s": 70,
    },
    {
      "p": 4.02856,
      "s": 80,
    },
    {
      "p": -5.97144,
      "s": 90,
    },
    {
      "p": -5.97144,
      "s": 100,
    },
    {
      "p": -5.97144,
      "s": 110,
    },
    {
      "p": 4.02856,
      "s": 120,
    },
    {
      "p": 14.0286,
      "s": 130,
    },
    {
      "p": 24.0286,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x put 90 @30D",
    "buy 1x call 110 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > put-ratio-spread payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -21.217,
      "s": 60,
    },
    {
      "p": -11.217,
      "s": 70,
    },
    {
      "p": -1.21703,
      "s": 80,
    },
    {
      "p": 8.78297,
      "s": 90,
    },
    {
      "p": -1.21703,
      "s": 100,
    },
    {
      "p": -1.21703,
      "s": 110,
    },
    {
      "p": -1.21703,
      "s": 120,
    },
    {
      "p": -1.21703,
      "s": 130,
    },
    {
      "p": -1.21703,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x put 100 @30D",
    "sell 2x put 90 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > short-strangle payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": -24.0286,
      "s": 60,
    },
    {
      "p": -14.0286,
      "s": 70,
    },
    {
      "p": -4.02856,
      "s": 80,
    },
    {
      "p": 5.97144,
      "s": 90,
    },
    {
      "p": 5.97144,
      "s": 100,
    },
    {
      "p": 5.97144,
      "s": 110,
    },
    {
      "p": -4.02856,
      "s": 120,
    },
    {
      "p": -14.0286,
      "s": 130,
    },
    {
      "p": -24.0286,
      "s": 140,
    },
  ],
  "strikes": [
    "sell 1x put 90 @30D",
    "sell 1x call 110 @30D",
  ],
}
`;

exports[`STRATEGY_TEMPLATES > straddle payoff matches snapshot 1`] = `
{
  "payoff": [
    {
      "p": 26.2549,
      "s": 60,
    },
    {
      "p": 16.2549,
      "s": 70,
    },
    {
      "p": 6.25492,
      "s": 80,
    },
    {
      "p": -3.74508,
      "s": 90,
    },
    {
      "p": -13.7451,
      "s": 100,
    },
    {
      "p": -3.74508,
      "s": 110,
    },
    {
      "p": 6.25492,
      "s": 120,
    },
    {
      "p": 16.2549,
      "s": 130,
    },
    {
      "p": 26.2549,
      "s": 140,
    },
  ],
  "strikes": [
    "buy 1x call 100 @30D",
    "buy 1x put 100 @30D",
  ],
}
`;
